scripts/_deploy/prod-cluster/svc-kustomize/primary/web-admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-admin
  labels:
    project: devops
    service: web-admin
    service-type: web #grpc / http / web
spec:
  selector:
    service: web-admin
  ports:
    - port: 80
      name: web-web-admin
      targetPort: 80
