scripts/_deploy/prod-cluster/svc-kustomize/primary/web-admin/istio-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: web-admin
spec:
  host: web-admin
  subsets:
  - labels:
      version: primary
    name: primary
